test/statements/manage/UnsafeResizeDomainChecksFail.good
{x = 0}
UnsafeResizeDomainChecksFail.chpl:12: error: halt reached - One or more elements of a non-nilable array remain uninitialized
